правки перед второй проверкой

--- a/source/form.html
+++ b/source/form.html
@@ -137,30 +137,30 @@
           </div>
         </div>
         <div class="form-sorting__fieldset order-fieldset order-fieldset-grey">
+          <h3 class="visually-hidden">Ваш контактный номер</h3>
           <div class="order-fieldset__container order-fieldset__container--contact order-fieldset__container--contact--first">
-            <h3 class="order-fieldset__legend"><span>тел</span></h3>
+            <label class="order-fieldset__legend" for="customer-phone"><span>тел</span></label>
             <div class="order-fieldset__icon-input-contaner">
-              <label class="order-fieldset__label visually-hidden" for="customer-phone">Телефон</label>
-              <input class="order-fieldset--phone-input" type="tel" name="phone-number" id="customer-phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required="">
-              <svg class="order-fieldset--phone-icon order-fieldset-icon" width="25" height="24"><use xlink:href="#icon-phone"></use></svg>
+              <input class="order-fieldset__phone-input" type="tel" name="phone-number" id="customer-phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required="">
+              <svg class="order-fieldset__phone-icon order-fieldset-icon" width="25" height="24"><use xlink:href="#icon-phone"></use></svg>
             </div>
           </div>
         </div>
         <div class="form-sorting__fieldset order-fieldset order-fieldset-grey">
+          <h3 class="visually-hidden">Ваш адресс электронный почты</h3>
           <div class="order-fieldset__container order-fieldset__container--contact">
-            <h3 class="order-fieldset__legend"><span>e-mail</span></h3>
+            <label class="order-fieldset__legend" for="customer-email"><span>e-mail</span></label>
             <div class="order-fieldset__icon-input-contaner">
-              <label class="order-fieldset__label visually-hidden" for="customer-email">Электронная почта</label>
-              <input class="order-fieldset--email-input" type="email" name="email" id="customer-email" placeholder="Ваш Email*" required="">
-              <svg class="order-fieldset--mail-icon order-fieldset-icon" width="32" height="30"><use xlink:href="#icon-mail"></use></svg>
+              <input class="order-fieldset__email-input" type="email" name="email" id="customer-email" placeholder="Ваш Email*" required="">
+              <svg class="order-fieldset__mail-icon order-fieldset-icon" width="32" height="30"><use xlink:href="#icon-mail"></use></svg>
             </div>
           </div>
         </div>
         <div class="form-sorting__additional-contaner">
+          <h3 class="visually-hidden">Комментарий к заказу</h3>
           <div class="form-sorting__fieldset form-sorting__fieldset--bottom order-fieldset">
             <div class="order-fieldset__container order-fieldset__container--comment order-fieldset__container--contact">
-              <h3 class="order-fieldset__legend"><span>доп</span></h3>
-              <label class="order-fieldset__label visually-hidden" for="customer-comment">Комментарий к заказу</label>
+              <label class="order-fieldset__legend" for="customer-comment"><span>доп</span></label>
               <textarea class="form-sorting__textarea" name="comment" id="customer-comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
           </div>
@@ -198,7 +198,7 @@
             </li>
           </ul>
           <a class="main-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="copyrgiht__creator">Разработано</p>
+            <p class="copyright__creator">Разработано</p>
             <div class="copyright__logo">
               <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#icon-logo-htmlacademy"></use></svg>
             </div>
