--- a/source/index.html
+++ b/source/index.html
@@ -160,7 +160,7 @@
       <section class="reviews">
         <div class="reviews__wrapper slider">
           <h2 class="reviews__title">Отзывы</h2>
-          <div class="rewiews__list slider__list">
+          <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
               <cite class="reviews__author">Анастасия Красильникова <span>@misssssiskras</span></cite>
               <p class="reviews__text">
@@ -250,7 +250,7 @@
             </li>
           </ul>
           <a class="main-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="copyrgiht__creator">Разработано</p>
+            <p class="copyright__creator">Разработано</p>
             <div class="copyright__logo">
               <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#icon-logo-htmlacademy"></use></svg>
             </div>
