--- a/source/catalog.html
+++ b/source/catalog.html
@@ -141,7 +141,7 @@
       </section>
       <section class="production">
         <h2 class="production__title">Процесс производства</h2>
-        <div class="production__container">
+        <div class="production__container catalog-video">
           <picture>
             <source type="image/webp" media="(min-width: 1050px)" srcset="img/webp/video-desktop@1x.webp 1x, img/webp/video-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 668px)" srcset="img/webp/video-tablet@1x.webp 1x, img/webp/video-tablet@2x.webp 2x">
@@ -150,7 +150,7 @@
             <source media="(min-width: 668px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
             <img class="catalog-video__image" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Не удалось загрузить видео">
           </picture>
-          <video class="production__media catalog-video">
+          <video class="production__media catalog-video__media">
             <source src="#" type="video/mishka-video.mp4">
             <source src="#" type="video/mishka-video.ogg">
             <source src="#" type="video/mishka-video.webm">
@@ -191,7 +191,7 @@
             </li>
           </ul>
           <a class="main-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="copyrgiht__creator">Разработано</p>
+            <p class="copyright__creator">Разработано</p>
             <div class="copyright__logo">
               <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#icon-logo-htmlacademy"></use></svg>
             </div>
