Добавил заголовок в форме

--- a/source/form.html
+++ b/source/form.html
@@ -67,6 +67,7 @@
       <h1 class="page-header__title page-header__title--form">Вязание на заказ</h1>
       </header>
       <form class="form-sorting" method="post" id="delivery-form" action="https://echo.htmlacademy.ru">
+        <h2 class="visually-hidden">Форма заказа товара</h2>
         <p class="form-sorting__description">
           Мы будем рады воплотить в жизнь ваши пожелания!
           Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
